# k8s-diagnosis-agent

./: ADVANCED_FEATURES.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.python39  LANGCHAIN_AGENT_FIXES.md  LANGCHAIN_OPTIMIZATION_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  Makefile  README.md  docker-compose.yml  env.example  langchain_optimization_plan.md  pyproject.toml  requirements.txt  requirements_langchain.txt  start.bat  test_langchain_agent.py  test_langchain_agent_fixed.py  tox.ini
helm/k8s-diagnosis-agent/: Chart.yaml  README.md  values.yaml
helm/k8s-diagnosis-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s_diagnosis_agent/: __init__.py  __main__.py  cli.py  config.py
k8s_diagnosis_agent/core/: __init__.py  agent.py  conversation.py  executor.py  planner.py  session.py
k8s_diagnosis_agent/kubeconfig/: __init__.py  models.py
k8s_diagnosis_agent/langchain_agent/: __init__.py  agent.py  chains.py  memory.py  prompts.py  tools.py
k8s_diagnosis_agent/llm/: __init__.py  base.py  claude_provider.py  deepseek_provider.py  factory.py  openai_provider.py
k8s_diagnosis_agent/tools/: __init__.py  base.py  k8s_tools.py  registry.py  system_tools.py
k8s_diagnosis_agent/web/: __init__.py  api.py  app.py  models.py
requirements/: python310.txt  python311.txt  python312.txt  python39.txt  test.txt
scripts/: build-multi-version.sh  start.sh
tests/: test_basic.py
